--- a/Milestone-5/index.html
+++ b/Milestone-5/index.html
@@ -1,5 +1,4 @@
 
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -55,67 +54,7 @@
     </form>
 
        <div id="resumeOutput">
-        <!-- resume will be generated beloq -->
-       </div>
-       <script src="script.js"></script>
-</body>
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume builder project</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Milestone-05
-    Unique Path and Shareable link Task 1
-    Unique URL generation
-    Does the system generate a unique path for each user'sresume based on their username -->
-    <form action="" id="resume-Form">
-        <fieldset>
-            <legend> Personal Information </legend>
-            <label for="cvname"> Resume Path:</label>
-            <input type="text" id="cvname" name="cvname" required> <br/>
-
-
-            <label for="name"> Name: </label>
-            <input type="text" id="name" name="name" required >  <br>
-
-            <label for="email"> Email: </label>
-            <input type="email" id="email" name="email" required > <br>
-
-            <label for="phone">Phone Number: </label>
-            <input type="number" id="phone" name="phone" required ><br>
-
-            <label for="photo">Profile Photo:</label>
-            <input type="file" id="photo" name="photo" accept="image/*" required>
-
-        </fieldset>
-
-        <fieldset>
-            <legend>Education: </legend>
-            <label for="education">Education: </label>
-            <textarea name="education" id="education" rows="5" required></textarea> <br>
-        </fieldset>
-
-        <fieldset>
-            <legend>Experience: </legend>
-            <label for="Experience">Experience: </label>
-            <textarea name="experience" id="experience" rows="5" required></textarea> <br>
-        </fieldset>
-
-        <fieldset>
-            <legend>Skills: </legend>
-            <label for="skills">Skills: </label>
-            <textarea name="skills" id="skills" rows="5" required></textarea> <br>
-        </fieldset>
-
-        <button type="submit">Generate Resume</button>
-    </form>
-
-       <div id="resumeOutput">
-        <!-- resume will be generated beloq -->
+        <!-- resume will be generated below -->
        </div>
        <script src="script.js"></script>
 </body>
